# PCSC_2019_Data_Approx

./: .gitignore  Approximator.cpp  Approximator.h  CMakeLists.txt  Config.cpp  Doxyfile  Fitter.cpp  Fitter.h  Inputdata.cpp  Matrix.cpp  Matrix.h  README.md  config.txt  main.cpp
config/: Config.cpp  config.txt  confignew.txt
core/: CMakeLists.txt  main.cpp
core/config/: config.txt
core/experiment/: DataIO.cpp  Experiment_Test.cpp  Experiment_Test.h
core/plot/: gnuplot_i.cpp  gnuplot_i.hpp  matlab_plot.m
core/src/: Fitter.h  Matrix.h
data/: generate_gt.m
debug/: CMakeCache.txt  CMakeLists.txt  Debug.cpp  Makefile  cmake_install.cmake
doc/doc_src/: Doxyfile_src
doc/doc_src/html/: _fitter_8h_source.html  _matrix_8h_source.html  annotated.html  class_fitter-members.html  class_fitter.html  class_matrix-members.html  class_matrix.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  index.html
doc/doc_src/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  related_0.js  related_1.js  related_2.js  searchdata.js
doc/doc_src/latex/: annotated.tex  class_fitter.tex  class_matrix.tex  refman.tex
doc/doc_test/: Doxyfile_test
doc/doc_test/html/: _config_8cpp.html  _config_8h.html  _config_8h_source.html  _data_i_o_8h_source.html  _test_8h_source.html  annotated.html  class_config-members.html  class_config.html  class_data_i_o-members.html  class_data_i_o.html  class_gnuplot-members.html  class_gnuplot.html  class_gnuplot_exception-members.html  class_gnuplot_exception.html  class_test-members.html  class_test.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  files.html  functions.html  functions_func.html  functions_vars.html  gnuplot__i_8cpp.html  gnuplot__i_8hpp.html  gnuplot__i_8hpp_source.html  hierarchy.html  menudata.js  struct_config_1_1_file__not__found-members.html  struct_config_1_1_file__not__found.html  struct_config_1_1_key__not__found-members.html  struct_config_1_1_key__not__found.html
doc/doc_test/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+25 more)
doc/doc_test/latex/: _config_8cpp.tex  _config_8h.tex  annotated.tex  class_config.tex  class_data_i_o.tex  class_gnuplot.tex  class_gnuplot_exception.eps  class_gnuplot_exception.tex  class_test.tex  files.tex  gnuplot__i_8cpp.tex  gnuplot__i_8hpp.tex  hierarchy.tex  refman.tex  struct_config_1_1_file__not__found.tex  struct_config_1_1_key__not__found.tex
src/: Fitter.cpp  Fitter.h  Matrix.cpp  Matrix.h
test/: Config.h  DataIO.cpp  DataIO.h  Inputdata.cpp  Inputdata.h  Test.cpp  Test.h  gnuplot_i.cpp  gnuplot_i.hpp
tests/: CMakeLists.txt  debug_test.cpp  main.cpp
tests/lib/googlemock/test/: gmock_test_utils.py
